# openusage

./: --help  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json  vite.config.ts
.github/workflows/: ci.yml  publish.yml  windows-gui.yml
.local-include/: stdbool.h
Casks/: openusage.rb
crates/openusage-cli/: Cargo.toml  build.rs
crates/openusage-cli/src/: batch_probe.rs  cli_width.rs  config.rs  cursor_token_usage.rs  daemon.rs  embedded_plugins.rs  history.rs  main.rs  panic_hook.rs  reset_display.rs
crates/openusage-cli/src/tui/: app.rs  mod.rs  picker.rs  platform.rs  state.rs  theme.rs  view_model.rs
crates/openusage-core/: Cargo.toml
crates/openusage-core/src/: claude_usage_scanner.rs  codex_usage_scanner.rs  cursor_paths.rs  cursor_usage_export.rs  cursor_usage_logs.rs  lib.rs  log_usage_types.rs  model_pricing.rs  paths.rs  provider_accounts.rs  provider_accounts_crypto.rs  proxy_config.rs  usage_daily.rs  usage_history.rs  usage_metrics.rs
crates/openusage-core/src/plugin_engine/: host_api.rs  manifest.rs  mod.rs  runtime.rs
crates/openusage-win-launcher/: Cargo.toml  build.rs
crates/openusage-win-launcher/src/: main.rs
docs/: capture-logs.md  local-http-api.md
docs/plugins/: api.md
docs/providers/: opencode-go.md
plugins/opencode-go/: plugin.js  plugin.json  plugin.test.js
scripts/: build-all-artifacts.sh  build-cli-windows.ps1  build-cli-zip-windows-gnu.sh  build-gui-portable-onefile-windows-gnu.sh  build-gui-portable-windows.ps1  build-gui-portable-zip-windows-gnu.sh  build-release.sh  bump-ccusage-version.mjs  collect-release-artifacts.sh  install.ps1  prepare-cli-sidecar.sh
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: WINDOWS-PORTABLE.txt
src-tauri/src/: error_logs.rs  gnome_window_anchor.rs  lib.rs  main.rs  panel.rs  panel_geometry.rs  panel_non_macos.rs  panel_windows.rs  popover_platform.rs  tray.rs
src-tauri/src/local_http_api/: cache.rs  mod.rs  server.rs  usage_history.rs
src-tauri/src/plugin_engine/: host_api.rs
src/components/: error-logs-dialog.test.tsx  error-logs-dialog.tsx  panel-footer.test.tsx  panel-footer.tsx  provider-card.test.tsx  provider-card.tsx  side-nav.test.tsx  side-nav.tsx  usage-export-dialog.tsx
src/components/app/: app-shell.tsx
src/hooks/: use-probe-events.ts
src/hooks/app/: use-panel.test.ts  use-panel.ts  use-tray-icon.ts
src/lib/: frontend-error-logging.test.ts  frontend-error-logging.ts  tray-bars-icon.test.ts  tray-bars-icon.ts
src/pages/: settings.test.tsx  settings.tsx
