[package]
name = "openusage"
version = "0.6.37"
description = "OpenUsage is an open source AI subscription limit tracker"
authors = ["Robin Ebers"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openusage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
openusage-core = { path = "../crates/openusage-core" }
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.47", features = ["formatting"] }
dirs = "6"
log = "0.4"
libc = "0.2"
reqwest = { version = "0.13", features = ["blocking", "socks"] }
tauri-plugin-store = "2.4.3"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-log = "2"
tauri-plugin-aptabase = { git = "https://github.com/aptabase/tauri-plugin-aptabase", rev = "e896cceb" }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rust_xlsxwriter = "0.95.0"
tauri-plugin-dialog = "2.7.1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
# nspanel powers the floating menubar panel; macOS-only.
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSScreen", "NSGraphics"] }
objc2-web-kit = { version = "0.3", features = ["WKPreferences", "WKWebView", "WKWebViewConfiguration"] }

[dev-dependencies]
serial_test = "3.4.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
