[package]
name = "openusage-cli"
version = "0.6.37"
description = "OpenUsage CLI — terminal interface for the same plugin engine as the GUI"
edition = "2021"

[[bin]]
name = "openusage-cli"
path = "src/main.rs"

[dependencies]
include_dir = "0.7.4"
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "cargo"] }
color-eyre = "0.6"
crossterm = "0.28"
openusage-core = { path = "../openusage-core" }
dirs = "5"
env_logger = "0.11"
log = "0.4"
notify-rust = "4"
owo-colors = "4"
ratatui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
csv = "1.3"
reqwest = { version = "0.13", features = ["blocking", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
signal-hook = "0.3"
sysinfo = "0.33"
textwrap = "0.16"
tabled = { version = "0.17", features = ["std"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
