[package]
name = "openusage-core"
version = "0.6.37"
description = "Shared plugin engine for OpenUsage (GUI + CLI)"
edition = "2024"

[lib]
name = "openusage_core"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22"
log = "0.4"
regex-lite = "0.1.9"
reqwest = { version = "0.13.3", features = ["blocking", "json", "socks"] }
rquickjs = { version = "0.12", features = ["bindgen"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
csv = "1.3"
sha2 = "0.11"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
dirs = "6"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
users = "0.11"

[dev-dependencies]
tempfile = "3"
serial_test = "3.5"
